nav-two/nav-two.css
/*Main*/
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
html{
    scroll-behavior: smooth;
}
body{
    font-family:"Roman-55","Helvetica Neue","Helvetica","Arial",sans-serif;
    color: #323232;
    font-size: 1em;
    line-height: 1.2;
    overflow-x: hidden;
    font-feature-settings: "salt";
    -webkit-font-feature-settings: "salt";
    -moz-font-feature-settings: "salt";
}
li{
    display: inline-block;
}
a{
    text-decoration:none;
    cursor: pointer;
    padding: 5px;
}
/*Main*/
/*Start Navigation One*/
.nav-main{
    border-bottom: 1px solid #ccc;
    height: 70px;
    width: 100%;
}
/*End Navigation One*/
/*Start Navigation optional*/
.nav-two{
    background-color: #fff;
    width: 100%;
}
    /*Sticky Navigation optional on scroll*/
.nav-two--sticky{
    position: fixed;
    top: 0px;
    width: 100%;
}
.nav-two_wrapper{
    display:flex;
    flex-direction: row;
    justify-content:space-between;
    align-items:center;
    padding: 10px;
    height: 50px;
    position: relative;
    border-bottom: 1px solid #ccc;
}
.nav-two_wrapper--second{
    justify-content:center;
    position: absolute;
    top: 70px;
    right: 100px;
}
    /*Sticky Navigation inner on scroll*/
.nav-two_wrapper--sticky{
    position: fixed;
    top:0px;
    width: 100%;
    right: -240px;
}
.nav-two_item--move{
    position: relative;
    right: -335px;/*right -335px to 0px */
}
.nav-two_item--fix{
    background-color: #fff;
    padding-right: 20px;
    z-index: 5;
}
.nav-two_a{
    color: #b3b3b3;
    margin-left: 10px;
    padding-left: 10px;
    font-size: 14px;
    line-height: 2;
}
.nav-two_a--left-active{
    color: #000000;
    cursor: default;
}
.nav-two_a--right{
    border-left: 1px solid #ccc;
}
.nav-two_a:hover{
    color: #000000;
}
.nav-two_a--active{
    color: #000000;
    border-bottom: 2px solid #EF2E4F;
    cursor:default;
}
.nav-two_a--button{
    color:#fff;
    background-color:#EB0028;
    font-size: 14px;
    padding:10px 15px;
    margin:0px 15px;
    position: relative;
    z-index: 5;
    transition-duration: 0.5s;
}
.nav-two_a--button:hover{
    background-color: #B8001F;
}
@media screen and (max-width:768px){
    .nav-main{
        height: 50px;
    }    
    .nav-two_wrapper--first{
        z-index:10 ;
        background-color: #fff;
    }
    .nav-two_wrapper--second{
        background-color: #fff;
        right: 0;
        top: 50px;
        width: 100%;
        justify-content:space-between;
    }    
    .nav-two_a--responsive-no{
        display: none;
    }
    .nav-two_a--move{
        color: #000000;
        border-bottom: 2px solid #EF2E4F;
        cursor:default;
    }
    .nav-two_item--move{
        right: 0;
        width: 35%;
    }
    
    .nav-two_item--fix{
        width: 65%;
    }
    .nav-two_ul--fix{
        width: 100%;
        display: flex;
        justify-content:space-between;
    }
    /*Sticky Navigation optional on scroll*/
.nav-two--sticky{
    position: fixed;
    top: 0px;
    width: 100%;
}
}
/*End Navigation Options*/
/*Start Section one*/
.section-one{
    margin-top:50px;
    height: 100vh;
}
/*End Section one*/
/*Start Section two*/
.section-two{
    height: 10vh;
    background-color: #bfcdd4;
}
/*End Section two*/
/*Start Section three*/
.section-three{
    height: 100vh;
    background-color: #bfd4c2;
}
/*End Section three*/

